fix image route

--- a/index.html
+++ b/index.html
@@ -46,70 +46,70 @@
     <section class="hero">
       <div class="container">
         <div class="card">
-          <img src="/images/headphon-1.png" alt="" />
+          <img src="images/headphon-1.png" alt="" />
           <h1>JVC S31-B</h1>
           <p class="price">N<span>19.99</span></p>
           <p>Lorem ipsum dolor sit amet consecteturin non!</p>
           <button class="btn">Add to Cart</button>
         </div>
         <div class="card">
-          <img src="/images/headphon-2.png" alt="" />
+          <img src="images/headphon-2.png" alt="" />
           <h1>JVC S31-B</h1>
           <p class="price">N<span>19.99</span></p>
           <p>Lorem ipsum dolor sit amet consecteturin non!</p>
           <button class="btn">Add to Cart</button>
         </div>
         <div class="card">
-          <img src="/images/headphon-3.png" alt="" />
+          <img src="images/headphon-3.png" alt="" />
           <h1>JVC S31-B</h1>
           <p class="price">N<span>19.99</span></p>
           <p>Lorem ipsum dolor sit amet consecteturin non!</p>
           <button class="btn">Add to Cart</button>
         </div>
         <div class="card">
-          <img src="/images/headphon-4.png" alt="" />
+          <img src="images/headphon-4.png" alt="" />
           <h1>JVC S31-B</h1>
           <p class="price">N<span>19.99</span></p>
           <p>Lorem ipsum dolor sit amet consecteturin non!</p>
           <button class="btn">Add to Cart</button>
         </div>
         <div class="card">
-          <img src="/images/headphon-5.png" alt="" />
+          <img src="images/headphon-5.png" alt="" />
           <h1>JVC S31-B</h1>
           <p class="price">N<span>19.99</span></p>
           <p>Lorem ipsum dolor sit amet consecteturin non!</p>
           <button class="btn">Add to Cart</button>
         </div>
         <div class="card">
-          <img src="/images/headphon-6.png" alt="" />
+          <img src="images/headphon-6.png" alt="" />
           <h1>JVC S31-B</h1>
           <p class="price">N<span>19.99</span></p>
           <p>Lorem ipsum dolor sit amet consecteturin non!</p>
           <button class="btn">Add to Cart</button>
         </div>
         <div class="card">
-          <img src="/images/headphon-7.png" alt="" />
+          <img src="images/headphon-7.png" alt="" />
           <h1>JVC S31-B</h1>
           <p class="price">N<span>19.99</span></p>
           <p>Lorem ipsum dolor sit amet consecteturin non!</p>
           <button class="btn">Add to Cart</button>
         </div>
         <div class="card">
-          <img src="/images/headphon-8.png" alt="" />
+          <img src="images/headphon-8.png" alt="" />
           <h1>JVC S31-B</h1>
           <p class="price">N<span>19.99</span></p>
           <p>Lorem ipsum dolor sit amet consecteturin non!</p>
           <button class="btn">Add to Cart</button>
         </div>
         <div class="card">
-          <img src="/images/headphon-9.png" alt="" />
+          <img src="images/headphon-9.png" alt="" />
           <h1>JVC S31-B</h1>
           <p class="price">N<span>19.99</span></p>
           <p>Lorem ipsum dolor sit amet consecteturin non!</p>
           <button class="btn">Add to Cart</button>
         </div>
         <div class="card">
-          <img src="/images/headphon-10.png" alt="" />
+          <img src="images/headphon-10.png" alt="" />
           <h1>JVC S31-B</h1>
           <p class="price">N<span>19.99</span></p>
           <p>Lorem ipsum dolor sit amet consecteturin non!</p>
@@ -154,6 +154,6 @@
         </ul>
       </div>
     </footer>
-    <script src="/js/index.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
